<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.tpm.batch1.ui.activities.LoginActivity"
        android:background="#A28686">
    <androidx.cardview.widget.CardView
            android:id="@+id/ivTPM"
            android:layout_marginTop="32dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            app:cardCornerRadius="50dp"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/talentprogram"/>

    </androidx.cardview.widget.CardView>
    <TextView
            android:layout_marginTop="32dp"
            android:id="@+id/tvTPM"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ivTPM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/tpm"
    />
    <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/tvTPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/profile_bg">
        <TextView
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:layout_height="wrap_content"
                android:text="@string/user_name"/>
        <EditText
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/password"/>
        <EditText
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btnSignIn"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:background="@drawable/signin_bg"/>
        <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"/>
            <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </LinearLayout>
    <TextView
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/ace"/>

</RelativeLayout>