<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <View
                android:id="@+id/vLine"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="13dp"
                android:layout_height="170dp"
                android:background="@drawable/course_details_item_bg"/>
        <LinearLayout
                android:id="@+id/lyDetails"
                android:layout_toEndOf="@id/vLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_marginTop="24dp"
                    android:id="@+id/tvCourseDetailsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/course_android"/>
            <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trainer"
                        android:textColor="@color/colorAccent"/>
                <TextView
                        android:id="@+id/tvCourseTrainerName"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/trainer"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date"
                        android:textColor="@color/colorAccent"/>
                <TextView
                        android:id="@+id/tvCourseStartDate"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"/>
                <TextView
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dateBetween"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_date"
                        android:textColor="@color/colorAccent"/>
                <TextView
                        android:id="@+id/tvCourseEndDate"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <RelativeLayout
                        android:layout_marginRight="8dp"
                        android:id="@+id/bgMon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/haveday_bg">
                    <TextView
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mon"
                            android:textColor="@color/colorAccent"/>

                </RelativeLayout>
                <RelativeLayout
                        android:id="@+id/bgTue"
                        android:layout_marginRight="8dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/havenot_day">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tue"
                            android:textColor="@color/colorAccent" android:layout_centerVertical="true"
                            android:layout_alignParentStart="true" android:layout_marginStart="4dp"/>

                </RelativeLayout>
                <RelativeLayout
                        android:id="@+id/bgWed"
                        android:layout_marginRight="8dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/haveday_bg">
                    <TextView
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wed"
                            android:textColor="@color/colorAccent"/>

                </RelativeLayout>
                <RelativeLayout
                        android:id="@+id/bgThu"
                        android:layout_marginRight="8dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/haveday_bg">
                    <TextView
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thu"
                            android:textColor="@color/colorAccent"/>

                </RelativeLayout>
                <RelativeLayout
                        android:id="@+id/bgFri"
                        android:layout_marginRight="8dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/havenot_day">
                    <TextView
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fri"
                            android:textColor="@color/colorAccent"/>

                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
        <View
                android:layout_marginLeft="23dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/lyDetails"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGray"/>

    </RelativeLayout>

</LinearLayout>