<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.tpm.batch1.ui.activities.SignUpActivity">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/signupToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorToolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/colorWhite"
            android:theme="@style/toolbarStyleWhite"
    />
    <ScrollView
            android:layout_below="@+id/signupToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                    android:id="@+id/ivUser"
                    android:layout_marginTop="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="50dp">
                <ImageView
                        android:id="@+id/ivImageProfile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/user"
                />
            </androidx.cardview.widget.CardView>
            <ImageView
                    android:id="@+id/ivCamera"
                    android:layout_below="@+id/ivUser"
                    android:layout_toEndOf="@+id/ivUser"
                    android:layout_marginLeft="8dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/camera"/>
            <LinearLayout
                    android:layout_below="@+id/ivCamera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <EditText
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:id="@+id/edtUserName"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"
                        android:hint="@string/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:id="@+id/edtPassword"
                        android:hint="@string/password"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:id="@+id/edtRePassword"
                        android:hint="@string/retype_password"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">
                    <TextView
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:text="@string/track"/>
                    <Spinner
                            android:layout_weight="1"
                            android:id="@+id/spinTrack"
                            android:layout_marginRight="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                    </Spinner>

                </LinearLayout>
                <LinearLayout
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">
                    <TextView
                            android:layout_gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorBlack"
                            android:layout_weight="1"
                            android:text="@string/gender"/>
                    <RadioGroup
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/radGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:orientation="horizontal">
                        <RadioButton
                                android:id="@+id/radMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="Male"/>
                        <RadioButton
                                android:layout_marginLeft="8dp"
                                android:id="@+id/radFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="FeMale"/>

                    </RadioGroup>

                </LinearLayout>
                <EditText
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:id="@+id/edtPhoneNumber"
                        android:hint="@string/phone"
                        android:textColorHint="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorBlack"
                        android:layout_height="wrap_content"/>

                <EditText
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:id="@+id/edtEmail"
                        android:hint="@string/email"
                        android:textColorHint="@color/colorBlack"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <EditText
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:id="@+id/edtBirthday"
                        android:hint="@string/birthday"
                        android:textColorHint="@color/colorBlack"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:id="@+id/edtAddress"
                        android:hint="@string/address"
                        android:textColor="@color/colorBlack"
                        android:textColorHint="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:id="@+id/edtFBAcc"
                        android:hint="@string/fb_account"
                        android:textColorHint="@color/colorBlack"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <EditText
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:id="@+id/edtQualification"
                        android:hint="@string/qualification"
                        android:textColorHint="@color/colorBlack"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <Button
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:background="@drawable/signin_bg"
                        android:textColor="@color/colorWhite"
                        android:text="@string/sign_up"/>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>


</RelativeLayout>