<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/activity_bg"
        android:layout_margin="8dp">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tvAssignmentTitle"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/tpm"/>
        <View
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorWhite"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">
            <LinearLayout
                    android:layout_weight="5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/tvAssignmentDescr"
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:text="@string/home_text_trainer"/>
                <RelativeLayout
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <!--<TextView
                            android:id="@+id/tvUploadStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorRed"
                            android:text="@string/need_to_submit"/>-->
                    <TextView
                            android:id="@+id/tvUploadDate"
                            android:layout_alignParentRight="true"
                            android:layout_gravity="right"
                            android:text="@string/date"
                            android:textColor="@color/colorWhite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </RelativeLayout>
            </LinearLayout>
            <!--<Button
                    android:id="@+id/btnUploadZipFile"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="2dp"
                    android:layout_gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/signin_bg"
                    android:textColor="@color/colorWhite"
                    android:textAllCaps="false"
                    android:text="Upload"/>-->
        </LinearLayout>

    </LinearLayout>

</LinearLayout>